Collections/apps/Collections-API/base/Collections-API-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collections-api
  name: collections-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: collections-api
